test_regress/t/t_config_param.out
%Error-UNSUPPORTED: t/t_config_param.v:24:3: Unsupported: config localparam declaration
   24 |   localparam P1 = "cfg.p1";
      |   ^~~~~~~~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_config_param.v:25:3: Unsupported: config localparam declaration
   25 |   localparam P2 = "cfg.p2";
      |   ^~~~~~~~~~
%Error-UNSUPPORTED: t/t_config_param.v:29:25: Unsupported: 'config use' parameter assignment
   29 |   instance t.u_1a use #(.P1(), .P2("override.u_a.p2"));
      |                         ^
%Error-UNSUPPORTED: t/t_config_param.v:29:32: Unsupported: 'config use' parameter assignment
   29 |   instance t.u_1a use #(.P1(), .P2("override.u_a.p2"));
      |                                ^
%Error-UNSUPPORTED: t/t_config_param.v:31:25: Unsupported: 'config use' parameter assignment
   31 |   instance t.u_1c use #(.P1(P1), .P2(P2));
      |                         ^
%Error-UNSUPPORTED: t/t_config_param.v:31:34: Unsupported: 'config use' parameter assignment
   31 |   instance t.u_1c use #(.P1(P1), .P2(P2));
      |                                  ^
%Error: Exiting due to
